# tm_simulator

./: .gitignore  README.md
compiler/: Cargo.toml  test.tm
compiler/src/: ast.rs  main.rs  parser.rs  parser_combine.rs  tm.rs
tm-viewer/: package-lock.json  package.json
tm-viewer/src/: App.vue  main.js
tm-viewer/src-tauri/: Cargo.toml  tauri.conf.json
tm-viewer/src-tauri/src/: lib.rs  main.rs
tm-viewer/src-tauri/src/tm/: mod.rs
tm-viewer/src/components/: HelloWorld.vue  Machine.vue  Main.vue
