[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
nom-regex = "0.2"
once_cell = "1.10"
regex = "1"
either = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "compiler"
path = "src/lib.rs"
